[gd_scene load_steps=15 format=3 uid="uid://ev7ks8xgonck"]

[ext_resource type="Texture2D" uid="uid://h3iktybsq3ky" path="res://Assets/Images/Characters/Player/virus.png" id="1_kp1uf"]
[ext_resource type="Script" path="res://Scripts/Main/game.gd" id="1_tt6dr"]
[ext_resource type="Script" path="res://Scripts/Main/VirtualJoystick.gd" id="2_nu77d"]
[ext_resource type="Script" path="res://Scripts/Characters/Player.gd" id="3_ah354"]
[ext_resource type="Script" path="res://Scripts/Maps/Background.gd" id="3_ofmbh"]
[ext_resource type="Texture2D" uid="uid://bkas1hityw13k" path="res://Assets/Images/Backgrounds/Man.png" id="3_wgp3x"]
[ext_resource type="Script" path="res://Scenes/Main/AttackController.gd" id="4_mm50d"]
[ext_resource type="Script" path="res://Scripts/Characters/Character.gd" id="5_kjv33"]
[ext_resource type="Script" path="res://Scenes/Main/WaveManager.gd" id="6_kx6dv"]
[ext_resource type="Script" path="res://Scripts/Main/EvolutionButton.gd" id="9_bal1w"]
[ext_resource type="Texture2D" uid="uid://dhd6jwailh7pt" path="res://Assets/Images/Game/EvolutionButton.png" id="9_kg7f5"]
[ext_resource type="Script" path="res://Scripts/Main/UI.gd" id="9_npht2"]
[ext_resource type="Script" path="res://Scripts/Main/EvolutionDrawer.gd" id="11_ds7mv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0a1dg"]

[node name="Game" type="Node2D"]
script = ExtResource("1_tt6dr")

[node name="Player" type="Sprite2D" parent="."]
texture = ExtResource("1_kp1uf")
script = ExtResource("3_ah354")

[node name="Camera2D" type="Camera2D" parent="Player"]

[node name="HealthLabel" type="Label" parent="Player/Camera2D"]
offset_right = 80.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="Area2D" type="Area2D" parent="Player"]
collision_mask = 11

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource("CircleShape2D_0a1dg")

[node name="AttackController" type="Node2D" parent="Player"]
script = ExtResource("4_mm50d")

[node name="Character" type="Node2D" parent="Player"]
script = ExtResource("5_kjv33")

[node name="VirtualJoystick" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_nu77d")

[node name="Background" type="Sprite2D" parent="."]
z_index = -10
texture = ExtResource("3_wgp3x")
centered = false
script = ExtResource("3_ofmbh")

[node name="WaveManager" type="Node2D" parent="."]
script = ExtResource("6_kx6dv")

[node name="UICamera" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UICamera"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_npht2")

[node name="MarginContainer" type="MarginContainer" parent="UICamera/UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="UICamera/UI/MarginContainer"]
layout_mode = 2

[node name="EvolutionButton" type="Button" parent="UICamera/UI/MarginContainer/VBoxContainer"]
layout_mode = 2
icon = ExtResource("9_kg7f5")
script = ExtResource("9_bal1w")

[node name="EvolutionCount" type="Label" parent="UICamera/UI/MarginContainer/VBoxContainer/EvolutionButton"]
layout_mode = 0
offset_right = 20.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 50

[node name="DNALabel" type="Label" parent="UICamera/UI"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)

[node name="EvolutionDrawer" type="Panel" parent="UICamera/UI"]
z_index = 100
custom_minimum_size = Vector2(400, 0)
layout_mode = 0
offset_right = 400.0
script = ExtResource("11_ds7mv")

[node name="VBoxContainer" type="VBoxContainer" parent="UICamera/UI/EvolutionDrawer"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 20

[node name="CloseButton" type="Button" parent="UICamera/UI/EvolutionDrawer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
offset_top = -31.0
grow_horizontal = 0
grow_vertical = 0
text = "X"

[node name="NoEvolutionsMessage" type="Label" parent="UICamera/UI/EvolutionDrawer"]
layout_mode = 2
offset_top = 35.0
offset_right = 166.0
offset_bottom = 61.0
text = "Collect DNA to Evolve"

[connection signal="pressed" from="UICamera/UI/MarginContainer/VBoxContainer/EvolutionButton" to="UICamera/UI" method="_on_evolution_button_pressed"]
[connection signal="pressed" from="UICamera/UI/EvolutionDrawer/CloseButton" to="UICamera/UI/EvolutionDrawer" method="_on_close_button_pressed"]
